@@ -31,7 +31,8 @@ size_t Print::write(const uint8_t *buffer, size_t size)
 {
   size_t n = 0;
   while (size--) {
-    n += write(*buffer++);
+    if (write(*buffer++)) n++;
+    else break;
   }
   return n;
 }
@@ -112,9 +113,7 @@ size_t Print::print(const Printable& x)
 
 size_t Print::println(void)
 {
-  size_t n = print('\r');
-  n += print('\n');
-  return n;
+  return write("\r\n");
 }
 
 size_t Print::println(const String &s)
